--- a/input.html
+++ b/input.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
+
 <body>
     <div class="base">
-        <div class="inv1"></div>
-        <div class="inv2">
-        <div class="quadradoa"></div>
-        <div class="inv3"></div>
-    </div>
+        <div class="quadradoa">
+            <div class="inv1">
+                <h1>Criar Uma Conta</h1>
+                <h3>Nome De Usuario</h3>
+                <div class="mb-3">
+                    <input type="text" id="nome de usuario" class="form-control" placeholder="nome de usuario">
+                  </div>
+            </div>
+                <div class="inv2"></div>
+
+            </div>
+        </div>
+
     </div>
 </body>
-</html>
 
+</html>
