--- a/input.html
+++ b/input.html
@@ -16,12 +16,27 @@
                 <h3>Nome De Usuario</h3>
                 <div class="mb-3">
                     <input type="text" id="nome de usuario" class="form-control" placeholder="nome de usuario">
+                </div>
+                <h3>email</h3>
+                <div class="mb-3">
+                    <input type="text" id="email" class="form-control" placeholder="email">
+                </div>
+                <h3>senha</h3>
+                <div class="mb-3">
+                    <input type="text" id="senha" class="form-control" placeholder="senha">
+                </div>
+                <h3>confirmação de senha</h3>
+                <div class="mb-3">
+                    <input type="text" id="confirmação de senha" class="form-control" placeholder="confirmação de senha">
+                </div>
+                <div class="d-gridgap-2">
+                    <button class="btn btn-primary" type="button">enviar</button>
                   </div>
             </div>
-                <div class="inv2"></div>
+            <div class="inv2"></div>
 
-            </div>
         </div>
+    </div>
 
     </div>
 </body>
